@@ -4,6 +4,7 @@
 	- autotrust options: add-holddown, del-holddown, keep-missing.
 	- autotrust store revoked status of trust points.
 	- ctime_r compat definition.
+	- detect yylex_destroy().
 
 24 August 2009: Wouter
 	- cleaner memory allocation on exit. autotrust test routines.
